--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
   <title>UGC</title>
   <!-- styles -->
   <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.6/yeti/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="public/css/styles.css" media="screen" title="no title">
 
   <style>
     li img {
@@ -17,11 +18,14 @@
   <ul class="nav nav-pills">
   <li role="presentation" class="active"><a href="/">Home</a></li>
   <li role="presentation"><a ui-sref="profile">Profile</a></li>
-  <li role="presentation"><a href="#">Log Trip</a></li>
+  <li role="presentation"><a ui-sref="newTrip">Log Trip</a></li>
 </ul>
 
+
   <div class="container" ng-controller="mainController as main">
-    Logged in user: {{ main.currentUser.username }}
+    <div class="col-md-4">
+
+    </div>
     <div ui-view></div>
   </div>
 
