--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <ul class="nav nav-pills">
-  <li role="presentation" class="active"><a href="/">Home</a></li>
+  <li role="presentation" class="active paperBtn"><a href="/">Home</a></li>
   <li role="presentation"><a ui-sref="profile">Profile</a></li>
   <li role="presentation"><a ui-sref="newTrip">Log Trip</a></li>
 </ul>
